# vcport-template

./: CMakeLists.txt  LICENSE  PT_PORT_NAME.vplspec  README.md  vpl.json
demo/: demo.cpp
include/: CMakeLists.txt
include/PT_PORT_NAME/: PT_PORT_NAME.hpp
src/: CMakeLists.txt
src/lib_PT_PORT_NAME/: CMakeLists.txt  PT_PORT_NAME.cpp
vcport/: portfile.cmake  vcpkg.json
