set(PT_PORT_NAME_INCLUDE_DIR ../../include)
set(PT_PORT_NAME_PUBLIC_HEADERS
    ${PT_PORT_NAME_INCLUDE_DIR}/PT_PORT_NAME/PT_PORT_NAME.hpp
)

set(PT_PORT_NAME_SOURCES
    PT_PORT_NAME.cpp
)

add_library(${PROJECT_NAME} STATIC ${PT_PORT_NAME_PUBLIC_HEADERS} ${PT_PORT_NAME_SOURCES})

# 强制使用CXX编译
set_target_properties(
    ${PROJECT_NAME}
    PROPERTIES
    LINKER_LANGUAGE CXX
    CXX_STANDARD 17
)

target_include_directories(
    ${PROJECT_NAME} PUBLIC
    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
    $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/${PT_PORT_NAME_INCLUDE_DIR}>
)

install(
    TARGETS ${PROJECT_NAME}
    EXPORT ${PROJECT_NAME}
    DESTINATION lib
    PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ
)